--- a/index.html
+++ b/index.html
@@ -1,136 +1,301 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Zoo Roulette + Result Checker</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Zoo Roulette (Free) + Board Result Checker</title>
 <style>
-    body { font-family: Arial, sans-serif; background: #f4f4f4; text-align: center; }
-    h1 { margin-top: 20px; }
-    #wheel { width: 400px; height: 400px; border-radius: 50%; border: 10px solid #333; margin: 20px auto; position: relative; overflow: hidden; transition: transform 5s ease-out; }
-    .segment { position: absolute; width: 50%; height: 50%; top: 50%; left: 50%; transform-origin: 0% 0%; background: orange; border: 1px solid #fff; display: flex; align-items: center; justify-content: center; font-size: 14px; font-weight: bold; color: white; text-shadow: 1px 1px 2px black; }
-    button { padding: 10px 20px; margin: 5px; cursor: pointer; }
-    #balance { font-weight: bold; }
-    .history { margin-top: 15px; background: white; padding: 10px; max-width: 300px; margin-left: auto; margin-right: auto; border-radius: 8px; }
+  :root{
+    --bg:#0f1220; --card:#171a2b; --accent:#f7c843; --accent2:#19c37d; --muted:#9aa3b2; --text:#ecf1ff;
+  }
+  *{box-sizing:border-box}
+  body{margin:0;font-family:Arial,Helvetica,sans-serif;background:var(--bg);color:var(--text);}
+  h1,h2,h3{margin:10px 0}
+  .wrap{max-width:1100px;margin:0 auto;padding:16px}
+  .card{background:var(--card);border-radius:14px;box-shadow:0 10px 30px rgba(0,0,0,.25);padding:16px;margin:12px 0}
+  .grid{display:grid;gap:12px}
+  @media(min-width:900px){.grid-2{grid-template-columns:1.2fr .8fr}}
+  .muted{color:var(--muted)}
+
+  /* =================== ZOO ROULETTE =================== */
+  .zr-top{display:flex;align-items:center;justify-content:space-between;gap:12px;flex-wrap:wrap}
+  .balance{font-size:18px;font-weight:700}
+  .chips{display:flex;gap:8px;flex-wrap:wrap}
+  .chip{padding:8px 12px;border-radius:999px;background:#242846;border:1px solid #2f3558;color:#fff;cursor:pointer;font-weight:700}
+  .chip.active{outline:2px solid var(--accent)}
+
+  .zr-area{display:grid;gap:16px}
+  @media(min-width:900px){.zr-area{grid-template-columns:480px 1fr}}
+
+  /* Wheel */
+  .wheel-wrap{position:relative;display:flex;align-items:center;justify-content:center}
+  .wheel{width:420px;height:420px;border-radius:50%;border:10px solid #1f233c;position:relative;overflow:hidden;background:#0b0e1a;transition:transform 4.8s cubic-bezier(.13,.74,.16,1)}
+  .pin{position:absolute;top:-8px;left:50%;transform:translateX(-50%);width:0;height:0;border-left:16px solid transparent;border-right:16px solid transparent;border-bottom:24px solid var(--accent)}
+  .seg{position:absolute;width:50%;height:50%;top:50%;left:50%;transform-origin:0% 0%;display:flex;align-items:center;justify-content:center;color:#fff;text-align:center;font-weight:700;text-shadow:0 2px 4px rgba(0,0,0,.6);border:1px solid rgba(255,255,255,.08)}
+  .seg > div{transform:skewY(calc(-1*(90deg - var(--ang))));padding:6px}
+  .seg small{display:block;color:#fff;opacity:.95;font-size:12px}
+
+  /* Colors for segments */
+  .c1{background:#e74c3c}.c2{background:#d35400}.c3{background:#3498db}.c4{background:#1abc9c}
+  .c5{background:#9b59b6}.c6{background:#2ecc71}.c7{background:#16a085}.c8{background:#f1c40f;color:#1a1a1a}.c9{background:#34495e}
+
+  /* Betting board */
+  .board{display:grid;grid-template-columns:repeat(3,1fr);gap:10px}
+  .cell{background:#1b1f35;border:1px solid #2a2f52;border-radius:12px;padding:10px;text-align:center;cursor:pointer;position:relative}
+  .cell:hover{outline:2px solid #2f3558}
+  .cell .name{font-size:16px;font-weight:700}
+  .cell .mult{font-size:12px;color:#ffd54f}
+  .cell .bet{position:absolute;bottom:8px;right:8px;background:#00000080;padding:3px 7px;border-radius:999px;font-size:12px}
+
+  .actions{display:flex;gap:10px;flex-wrap:wrap;margin-top:8px}
+  .btn{background:var(--accent2);border:none;color:#00120a;padding:10px 14px;border-radius:10px;font-weight:800;cursor:pointer}
+  .btn.secondary{background:#2a2f52;color:#d7def0}
+
+  .status{margin-top:8px;font-weight:700}
+
+  /* History */
+  .history{max-height:260px;overflow:auto;background:#11152a;border:1px solid #273055;border-radius:10px}
+  .history table{width:100%;border-collapse:collapse}
+  .history th,.history td{padding:10px;border-bottom:1px solid #222a47;font-size:14px}
+  .history tr.win{background:#0e2b1f}
+  .history tr.lose{background:#2a1515}
+
+  /* =================== RESULT CHECKER =================== */
+  .rc label{display:block;text-align:left;margin:6px 0 4px}
+  .rc select,.rc input{width:100%;padding:10px;border-radius:10px;border:1px solid #2a2f52;background:#0f1430;color:#e9eeff}
+  .rc .grid{grid-template-columns:repeat(2,1fr)}
+  .rc .grid-3{grid-template-columns:repeat(3,1fr)}
+  .rc button{background:#3552ff;color:#fff;border:none;padding:10px 14px;border-radius:10px;font-weight:800;cursor:pointer}
+  iframe{width:100%;height:520px;border:0;border-radius:12px;background:#0b0f24}
 </style>
 </head>
 <body>
+  <div class="wrap">
+    <div class="card">
+      <h1>Zoo Roulette — Free Mode</h1>
+      <div class="zr-top">
+        <div class="balance">💰 Balance: <span id="bal">5000</span> chips</div>
+        <div class="chips" id="chipsRow"></div>
+      </div>
 
-<h1>Zoo Roulette</h1>
-<p>Balance: <span id="balance">5000</span> chips</p>
-<div id="wheel"></div>
-<div>
-    <button onclick="placeBet(10)">Bet 10</button>
-    <button onclick="placeBet(100)">Bet 100</button>
-    <button onclick="spinWheel()">Spin</button>
-</div>
-<div class="history">
-    <h3>History</h3>
-    <ul id="historyList"></ul>
-</div>
-<hr>
-<h2>Board Result Checker</h2>
-<select id="class">
-    <option value="">Select Class</option>
-    <option>9th</option>
-    <option>10th</option>
-    <option>11th</option>
-    <option>12th</option>
-</select>
-<select id="province" onchange="updateBoards()">
-    <option value="">Select Province</option>
-    <option>Punjab</option>
-    <option>Sindh</option>
-    <option>KPK</option>
-    <option>Balochistan</option>
-    <option>AJK</option>
-    <option>Federal</option>
-</select>
-<select id="board"></select>
-<input type="text" id="roll" placeholder="Enter Roll Number">
-<button onclick="checkResult()">Check Result</button>
-<iframe id="resultFrame" style="width:100%; height:400px; margin-top:10px;"></iframe>
+      <div class="zr-area">
+        <!-- Wheel side -->
+        <div class="wheel-wrap">
+          <div class="pin"></div>
+          <div id="wheel" class="wheel"></div>
+        </div>
+
+        <!-- Betting + history side -->
+        <div>
+          <div class="board" id="betBoard"></div>
+          <div class="actions">
+            <button class="btn" id="spinBtn">SPIN</button>
+            <button class="btn secondary" id="clearBtn">Clear Bets</button>
+          </div>
+          <div class="status" id="status">Place your bets by selecting a chip and tapping an animal.</div>
+          <div class="history card" style="margin-top:12px">
+            <table>
+              <thead>
+                <tr><th>#</th><th>Result</th><th>Mult</th><th>Win</th><th>Balance</th></tr>
+              </thead>
+              <tbody id="histBody"></tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- ================= Result Checker ================= -->
+    <div class="card rc">
+      <h2>Board Result Checker</h2>
+      <div class="grid rc grid-3">
+        <div>
+          <label>Class</label>
+          <select id="classSelect">
+            <option value="">— Select Class —</option>
+            <option>9th</option>
+            <option>10th</option>
+            <option>11th</option>
+            <option>12th</option>
+          </select>
+        </div>
+        <div>
+          <label>Province / Region</label>
+          <select id="provSelect"></select>
+        </div>
+        <div>
+          <label>Board</label>
+          <select id="boardSelect"></select>
+        </div>
+      </div>
+      <div class="grid rc">
+        <div>
+          <label>Roll Number</label>
+          <input id="rollInput" placeholder="Enter Roll Number" />
+        </div>
+        <div style="align-self:end">
+          <button id="openBtn">Open Official Page</button>
+        </div>
+      </div>
+      <iframe id="resultFrame" title="Official Result Page"></iframe>
+    </div>
+  </div>
 
 <script>
-const animals = [
-    { name: "Eagle", multiplier: 12, color: "#e74c3c" },
-    { name: "Lion", multiplier: 12, color: "#d35400" },
-    { name: "Pigeon", multiplier: 8, color: "#3498db" },
-    { name: "Peacock", multiplier: 8, color: "#1abc9c" },
-    { name: "Monkey", multiplier: 8, color: "#9b59b6" },
-    { name: "Panda", multiplier: 8, color: "#2ecc71" },
-    { name: "Swallow", multiplier: 6, color: "#16a085" },
-    { name: "Rabbit", multiplier: 6, color: "#f1c40f" },
-    { name: "Shark", multiplier: 24, color: "#34495e" }
+/********************
+ * ZOO ROULETTE GAME *
+ ********************/
+// Animals & multipliers (as requested)
+const ANIMALS = [
+  {name:'Eagle', mult:12, color:'c1'},
+  {name:'Lion', mult:12, color:'c2'},
+  {name:'Pigeon', mult:8, color:'c3'},
+  {name:'Peacock', mult:8, color:'c4'},
+  {name:'Monkey', mult:8, color:'c5'},
+  {name:'Panda', mult:8, color:'c6'},
+  {name:'Swallow', mult:6, color:'c7'},
+  {name:'Rabbit', mult:6, color:'c8'},
+  {name:'Shark', mult:24, color:'c9'}
 ];
 
 let balance = 5000;
-let betAmount = 0;
-let wheel = document.getElementById("wheel");
-let anglePerSegment = 360 / animals.length;
-let currentRotation = 0;
+let currentChip = 10;
+const CHIP_VALUES = [10,50,100,500,1000];
+let bets = {}; // index -> amount
+let spinInProgress = false;
+let historyCount = 0;
 
-animals.forEach((animal, i) => {
-    let segment = document.createElement("div");
-    segment.className = "segment";
-    segment.style.transform = `rotate(${i * anglePerSegment}deg) skewY(${90 - anglePerSegment}deg)`;
-    segment.style.background = animal.color;
-    segment.textContent = animal.name + " x" + animal.multiplier;
-    wheel.appendChild(segment);
+const balEl = document.getElementById('bal');
+const chipsRow = document.getElementById('chipsRow');
+const boardEl = document.getElementById('betBoard');
+const wheelEl = document.getElementById('wheel');
+const statusEl = document.getElementById('status');
+const histBody = document.getElementById('histBody');
+
+// Build chips row
+CHIP_VALUES.forEach(v=>{
+  const b = document.createElement('button');
+  b.className = 'chip' + (v===currentChip?' active':'');
+  b.textContent = v;
+  b.onclick = ()=>{
+    currentChip = v; [...chipsRow.children].forEach(x=>x.classList.remove('active')); b.classList.add('active');
+  };
+  chipsRow.appendChild(b);
 });
 
-function placeBet(amount) {
-    betAmount = amount;
-    alert("Bet placed: " + amount);
+// Build betting board
+ANIMALS.forEach((a,idx)=>{
+  bets[idx]=0;
+  const c = document.createElement('div');
+  c.className = 'cell';
+  c.innerHTML = `<div class="name">${a.name}</div><div class="mult">x${a.mult}</div><div class="bet" id="bet-${idx}">0</div>`;
+  c.onclick = ()=> addBet(idx);
+  boardEl.appendChild(c);
+});
+
+function addBet(idx){
+  if(spinInProgress) return;
+  if(balance < currentChip){ status('Not enough chips.'); return; }
+  balance -= currentChip; updateBal();
+  bets[idx] += currentChip; document.getElementById('bet-'+idx).textContent = bets[idx];
+  status(`Bet +${currentChip} on ${ANIMALS[idx].name}`);
 }
 
-function spinWheel() {
-    if (betAmount <= 0) { alert("Please place a bet first"); return; }
-    let spin = Math.floor(Math.random() * 360) + 1440; // 4 full spins + random
-    currentRotation += spin;
-    wheel.style.transform = `rotate(${currentRotation}deg)`;
-
-    setTimeout(() => {
-        let winningIndex = Math.floor(((360 - (currentRotation % 360)) % 360) / anglePerSegment);
-        let winner = animals[winningIndex];
-        let winAmount = betAmount * winner.multiplier;
-        balance += winAmount - betAmount;
-        document.getElementById("balance").textContent = balance;
-        let li = document.createElement("li");
-        li.textContent = `${winner.name} (${winner.multiplier}x) => +${winAmount - betAmount}`;
-        document.getElementById("historyList").prepend(li);
-    }, 5000);
+function clearBets(){
+  if(spinInProgress) return;
+  let refund = 0; Object.keys(bets).forEach(i=>{ refund += bets[i]; bets[i]=0; document.getElementById('bet-'+i).textContent='0'; });
+  balance += refund; updateBal();
+  status('All bets cleared. Refund: '+refund);
 }
 
-// Result Checker logic
-const boards = {
-    "Punjab": ["BISE Lahore", "BISE Faisalabad", "BISE Gujranwala", "BISE Multan", "BISE Rawalpindi", "BISE Sahiwal", "BISE Bahawalpur", "BISE DG Khan", "BISE Sargodha"],
-    "Sindh": ["BIEK Karachi", "BISE Hyderabad", "BISE Sukkur", "BISE Larkana", "BISE Mirpurkhas", "Aga Khan Board"],
-    "KPK": ["BISE Peshawar", "BISE Abbottabad", "BISE Swat", "BISE Kohat", "BISE Mardan", "BISE Dera Ismail Khan", "BISE Bannu", "BISE Malakand"],
-    "Balochistan": ["BISE Quetta"],
-    "AJK": ["BISE Mirpur AJK"],
-    "Federal": ["Federal Board Islamabad"]
+document.getElementById('clearBtn').onclick = clearBets;
+
+document.getElementById('spinBtn').onclick = ()=>{
+  if(spinInProgress) return;
+  const totalBet = Object.values(bets).reduce((a,b)=>a+b,0);
+  if(totalBet<=0){ status('Place a bet first.'); return; }
+  spinInProgress = true; status('Spinning...');
+  spinWheel();
 };
 
-function updateBoards() {
-    let province = document.getElementById("province").value;
-    let boardSelect = document.getElementById("board");
-    boardSelect.innerHTML = "";
-    boards[province].forEach(board => {
-        let opt = document.createElement("option");
-        opt.value = board;
-        opt.textContent = board;
-        boardSelect.appendChild(opt);
-    });
+function updateBal(){ balEl.textContent = balance; }
+function status(msg){ statusEl.textContent = msg; }
+
+// Build wheel segments visually
+const ANG = 360/ANIMALS.length; // 40deg for 9? actually 40; we'll compute per var
+ANIMALS.forEach((a,i)=>{
+  const seg = document.createElement('div');
+  seg.className = `seg ${a.color}`; seg.style.setProperty('--ang', (90-ANG)+'deg');
+  seg.style.transform = `rotate(${i*ANG}deg) skewY(${90-ANG}deg)`;
+  seg.innerHTML = `<div>${a.name}<small>x${a.mult}</small></div>`;
+  wheelEl.appendChild(seg);
+});
+
+let currentRotation = 0;
+function spinWheel(){
+  // pick random winning index uniformly
+  const winIndex = Math.floor(Math.random()*ANIMALS.length);
+  // compute target so that winIndex ends up at the top (pin at 0deg)
+  const targetAngle = 360 - (winIndex*ANG + ANG/2); // center of segment to pin
+  const extraSpins = 5; // full rotations
+  const final = currentRotation + extraSpins*360 + targetAngle - (currentRotation % 360);
+  currentRotation = final;
+  wheelEl.style.transform = `rotate(${final}deg)`;
+
+  // settle after animation
+  setTimeout(()=>{
+    resolveRound(winIndex);
+  }, 5000);
 }
 
-function checkResult() {
-    let board = document.getElementById("board").value;
-    let roll = document.getElementById("roll").value;
-    if(!roll) { alert("Please enter Roll Number!"); return; }
-    document.getElementById("resultFrame").src = "https://www.google.com/search?q=" + board + " result " + roll;
+function resolveRound(winIndex){
+  const winner = ANIMALS[winIndex];
+  const stake = Object.values(bets).reduce((a,b)=>a+b,0);
+  const win = (bets[winIndex]||0) * winner.mult;
+  balance += win; updateBal();
+  status(`Result: ${winner.name} x${winner.mult}. You ${win>0?('won '+win):'won 0'}.`);
+
+  // history row
+  historyCount += 1;
+  const tr = document.createElement('tr');
+  tr.className = win>0?'win':'lose';
+  tr.innerHTML = `<td>${historyCount}</td><td>${winner.name}</td><td>x${winner.mult}</td><td>${win}</td><td>${balance}</td>`;
+  histBody.prepend(tr);
+
+  // reset bets display
+  Object.keys(bets).forEach(i=>{ bets[i]=0; document.getElementById('bet-'+i).textContent='0'; });
+  spinInProgress = false;
 }
+
+/************************
+ * RESULT CHECKER (PK)   *
+ ************************/
+const BOARD_LINKS = {
+  Punjab: ["BISE Lahore","BISE Faisalabad","BISE Gujranwala","BISE Multan","BISE Rawalpindi","BISE Sahiwal","BISE Bahawalpur","BISE DG Khan","BISE Sargodha"],
+  Sindh: ["BIEK Karachi","BISE Hyderabad","BISE Sukkur","BISE Larkana","BISE Mirpurkhas","Aga Khan Board"],
+  KPK: ["BISE Peshawar","BISE Abbottabad","BISE Swat","BISE Kohat","BISE Mardan","BISE Dera Ismail Khan","BISE Bannu","BISE Malakand"],
+  Balochistan:["BISE Quetta"],
+  AJK:["BISE Mirpur AJK"],
+  Federal:["Federal Board Islamabad"]
+};
+const PROVS = Object.keys(BOARD_LINKS);
+const provSelect = document.getElementById('provSelect');
+provSelect.innerHTML = '<option value="">— Select Province —</option>' + PROVS.map(p=>`<option>${p}</option>`).join('');
+const boardSelect = document.getElementById('boardSelect');
+
+provSelect.addEventListener('change', ()=>{
+  const p = provSelect.value; boardSelect.innerHTML='';
+  if(!p) return;
+  BOARD_LINKS[p].forEach(b=>{ const o=document.createElement('option'); o.textContent=b; boardSelect.appendChild(o); });
+});
+
+document.getElementById('openBtn').addEventListener('click', ()=>{
+  const brd = boardSelect.value; const roll = document.getElementById('rollInput').value.trim();
+  if(!brd || !roll){ alert('Please select board and enter roll number.'); return; }
+  // Use a search query to reach official result quickly (embedding most boards is blocked)
+  const q = encodeURIComponent(`${brd} result ${roll}`);
+  document.getElementById('resultFrame').src = `https://www.google.com/search?q=${q}`;
+});
 </script>
-
 </body>
 </html>
