--- a/index.html
+++ b/index.html
@@ -51,3 +51,171 @@ function openResultPage() {
     }
 }
 </script>
+<!DOCTYPE html>
+<html lang="ur">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>10th Class Physics Important Questions</title>
+<style>
+  body { font-family: "Noto Nastaliq Urdu", serif; direction: rtl; padding: 20px; background: #f7f7f7; }
+  h1 { text-align: center; color: #333; }
+  .lesson-list, .question-list { margin: 10px 0; padding: 0; list-style: none; }
+  .lesson-list li, .question-list li { background: #fff; margin: 5px 0; padding: 10px; border-radius: 8px; cursor: pointer; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
+  .question-list { display: none; }
+  .back-btn { margin: 10px 0; cursor: pointer; color: blue; text-decoration: underline; display: inline-block; }
+</style>
+</head>
+<body>
+
+<h1>10th Class Physics Important Questions</h1>
+
+<ul class="lesson-list">
+  <li onclick="showQuestions('lesson10')">سبق 10: Simple Harmonic Motion & Waves</li>
+  <li onclick="showQuestions('lesson11')">سبق 11: Sound</li>
+  <li onclick="showQuestions('lesson12')">سبق 12: Geometrical Optics</li>
+  <li onclick="showQuestions('lesson13')">سبق 13: Electrostatics</li>
+  <li onclick="showQuestions('lesson14')">سبق 14: Current Electricity</li>
+  <li onclick="showQuestions('lesson15')">سبق 15: Electromagnetism</li>
+</ul>
+
+<!-- سبق 10 -->
+<div id="lesson10" class="question-list">
+  <span class="back-btn" onclick="goBack()">← سبق کی فہرست میں واپس</span>
+  <ul>
+    <li>سوال 1: سادہ ہارمک حرکت (SHM) کی تعریف کریں۔ <strong>Answer Page: 142</strong></li>
+    <li>سوال 2: ایمپلیٹیوڈ اور فریکونسی میں فرق بیان کریں۔ <strong>Answer Page: 142</strong></li>
+    <li>سوال 3: پیریڈ اور فریکوئنسی کے درمیان تعلق لکھیں۔ <strong>Answer Page: 142</strong></li>
+    <li>سوال 4: رفتار اور اسپیڈ میں فرق بیان کریں۔ <strong>Answer Page: 142</strong></li>
+    <li>سوال 5: توانائی (Potential & Kinetic) کی تعریف اور SHM میں تبدیلی بیان کریں۔ <strong>Answer Page: 142</strong></li>
+    <li>سوال 6: ریزوننس کیا ہے؟</li>
+    <li>سوال 7: میکانیکی لہروں کی اقسام بیان کریں۔</li>
+    <li>سوال 8: طول موج اور موج کی رفتار کے درمیان تعلق لکھیں۔</li>
+    <li>سوال 9: ساؤنڈ کی پیدائش اور اس کی ترسیل کیسے ہوتی ہے؟</li>
+    <li>سوال 10: آواز کی کوالٹی اور انٹینسٹی میں فرق بیان کریں۔</li>
+  </ul>
+</div>
+
+<!-- سبق 11 -->
+<div id="lesson11" class="question-list">
+  <span class="back-btn" onclick="goBack()">← سبق کی فہرست میں واپس</span>
+  <ul>
+    <li>سوال 1: آواز کی لاؤڈنس سے کیا مراد ہے؟ ایک مثال دیں۔ <strong>Answer Page: 24</strong></li>
+    <li>سوال 2: آواز کی کوالٹی اور انٹینسٹی میں فرق بیان کریں۔ <strong>Answer Page: 26</strong></li>
+    <li>سوال 3: پچ اور فریکونسی میں فرق بیان کریں۔ <strong>Answer Page: 26</strong></li>
+    <li>سوال 4: زیرو بیل سے کیا مراد ہے؟ ساؤنڈ انٹینسٹی لیول کی تعریف کریں۔ <strong>Answer Page: 26</strong></li>
+    <li>سوال 5: ریفلیکشن آف ساؤنڈ سے کیا مراد ہے؟ <strong>Answer Page: 28</strong></li>
+    <li>سوال 6: وائبریٹنگ جسم کا ایمپلیٹیوڈ تبدیل ہونے سے آواز کی لاؤڈنس اور اسپیڈ پر کیا اثر پڑتا ہے؟ <strong>Answer Page: 25</strong></li>
+    <li>سوال 7: آواز کی اسپیڈ معلوم کرنے کا فارمولا لکھیں اور ہوا میں آواز کی اسپیڈ کتنی ہے؟ <strong>Answer Page: 25</strong></li>
+    <li>سوال 8: میوزیکل ساؤنڈ اور شور میں فرق بیان کریں۔ <strong>Answer Page: 25</strong></li>
+    <li>سوال 9: صوتی نگہبانی (Resonance) کی تعریف کریں۔ <strong>Answer Page: 25</strong></li>
+    <li>سوال 10: شور کے انسانی جسم پر مضر اثرات لکھیں۔ <strong>Answer Page: 32</strong></li>
+    <li>سوال 11: بازگشت (Echo) کیا ہے؟ <strong>Answer Page: 33</strong></li>
+    <li>سوال 12: قابلِ سماعت آواز کی فریکونسی کی حدود کیا ہیں اور یہ عمر کے ساتھ کیسے کم ہوتی ہیں؟ <strong>Answer Page: 34</strong></li>
+    <li>سوال 13: الٹراساؤنڈ کیا ہے؟ اس کے استعمالات لکھیں۔ <strong>Answer Page: 34</strong></li>
+    <li>سوال 14: اسٹیتھوسکوپ (Stethoscope) کیا ہے؟ <strong>Answer Page: 22</strong></li>
+    <li>سوال 15: سونار (SONAR) کی تعریف کریں۔ <strong>Answer Page: 35</strong></li>
+    <li>سوال 16: الٹرا ساؤنڈ کے استعمالات لکھیں۔ <strong>Answer Page: 35</strong></li>
+    <li>سوال 17: الٹرا ساؤنڈ سے سمندری گہرائی کیسے معلوم کی جا سکتی ہے؟ <strong>Answer Page: 35</strong></li>
+    <li>سوال 18: ایم آر آئی کیسے کام کرتا ہے؟ <strong>Answer Page: 139</strong></li>
+    <li>سوال 19: الیکٹرو میگنیٹزم کی تعریف کریں۔ <strong>Answer Page: 139</strong></li>
+    <li>سوال 20: جسم کے ایریا سے کیا مراد ہے؟ <strong>Answer Page: 139</strong></li>
+  </ul>
+</div>
+
+<!-- سبق 12 -->
+<div id="lesson12" class="question-list">
+  <span class="back-btn" onclick="goBack()">← سبق کی فہرست میں واپس</span>
+  <ul>
+    <li>سوال 1: روشنی کے ریفلیکشن کے عمل کی تعریف کریں۔ <strong>Answer Page: 42</strong></li>
+    <li>سوال 2: روشنی کی ریفلیکشن کے دو قوانین بیان کریں۔ <strong>Answer Page: 42</strong></li>
+    <li>سوال 3: باقاعدہ اور بے قاعدہ ریفلیکشن میں کیا فرق ہے؟ <strong>Answer Page: 42</strong></li>
+    <li>سوال 4: سفیریکل مرر کی تعریف کریں اور اس کی کتنی اقسام ہیں۔ <strong>Answer Page: 42–43</strong></li>
+    <li>سوال 5: کنکیو اور کنویکس مرر میں فرق لکھیں۔ <strong>Answer Page: 43</strong></li>
+    <li>سوال 6: پول اور سینٹر آف کرویچر میں فرق بیان کریں۔ <strong>Answer Page: 43</strong></li>
+    <li>سوال 7: ریڈیس آف کرویچر اور پرنسپل ایکسس میں کیا فرق ہے؟ <strong>Answer Page: 43</strong></li>
+    <li>سوال 8: پرنسپل فوکس اور فوکل لینتھ میں فرق بیان کریں۔ <strong>Answer Page: 44</strong></li>
+    <li>سوال 9: ریل اور ورچوئل امیج میں فرق لکھیں۔ <strong>Answer Page: 72</strong></li>
+    <li>سوال 10: انڈیکس کی تعریف کریں اور اس کا فارمولا لکھیں۔ <strong>Answer Page: 49</strong></li>
+    <li>سوال 11: کریٹیکل اینگل کی تعریف کریں۔ <strong>Answer Page: 50</strong></li>
+    <li>سوال 12: روشنی کی ریفریکشن کی تعریف کریں اور دو قوانین لکھیں۔ <strong>Answer Page: 48</strong></li>
+    <li>سوال 13: ٹوٹل انٹرنل ریفلیکشن کی تعریف کریں۔ <strong>Answer Page: 50</strong></li>
+    <li>سوال 14: سنیل کا قانون بیان کریں اور فارمولا لکھیں۔ <strong>Answer Page: 49</strong></li>
+    <li>سوال 15: لینز پاور کی تعریف کریں اور اس کے یونٹ کی وضاحت کریں۔ <strong>Answer Page: 56</strong></li>
+    <li>سوال 16: کنورجنگ لینز اور ڈائیورجنگ لینز میں کیا فرق ہے؟ <strong>Answer Page: 55</strong></li>
+    <li>سوال 17: مرر فارمولا کیا ہے؟ <strong>Answer Page: 46</strong></li>
+    <li>سوال 18: پرزم سے کیا مراد ہے؟ <strong>Answer Page: 54</strong></li>
+    <li>سوال 19: لینز کی چار اقسام کے نام لکھیں۔ <strong>Answer Page: 55</strong></li>
+    <li>سوال 20: نقطۂ قریب اور نقطۂ بعید سے کیا مراد ہے؟ <strong>Answer Page: 70</strong></li>
+    <li>سوال 21: کیمرہ میں لینز کا استعمال بیان کریں۔ <strong>Answer Page: 62</strong></li>
+    <li>سوال 22: سادہ مائیکروسکوپ کی تعریف کریں۔ <strong>Answer Page: 64</strong></li>
+    <li>سوال 23: ٹیلی سکوپ کا کام بیان کریں۔ <strong>Answer Page: 67–69</strong></li>
+    <li>سوال 24: قریب نظری اور بعید نظری میں فرق اور نقص کیسے دور کیا جا سکتا ہے؟ <strong>Answer Page: 70–71</strong></li>
+    <li>سوال 25: لینز کی تعریف کریں اور اس کے استعمالات لکھیں۔ <strong>Answer Page: 60</strong></li>
+    <li>سوال 26: لینز کی مروجہ علامات بیان کریں۔ <strong>Answer Page: 60</strong></li>
+  </ul>
+</div>
+
+<!-- سبق 14 -->
+<div id="lesson14" class="question-list">
+  <span class="back-btn" onclick="goBack()">← سبق کی فہرست میں واپس</span>
+  <ul>
+    <li>سوال 1: کرنٹ اور اس کے یونٹ کی تعریف کریں۔ <strong>Answer Page: 106–107</strong></li>
+    <li>سوال 2: پوٹینشل ڈفرنس اور کنونشنل ڈفرنس میں فرق کریں۔ <strong>Answer Page: 109–110</strong></li>
+    <li>سوال 3: الیکٹرو موٹو فورس کے طریق، اس کا یونٹ اور مساوات لکھیں۔ <strong>Answer Page: 111</strong></li>
+    <li>سوال 4: اوہم کا قانون بیان کریں اور مساوات لکھیں۔ <strong>Answer Page: 113</strong></li>
+    <li>سوال 5: سرکٹ بریکر اور ارتھ وائر میں فرق بیان کریں۔ <strong>Answer Page: 130</strong></li>
+    <li>سوال 6: سیریز طریقہ سے جوڑے گئے ریزسٹنس کی خصوصیات بیان کریں۔ <strong>Answer Page: 117</strong></li>
+    <li>سوال 7: ٹائم پیریڈ کی تعریف کریں اور گھروں میں الیکٹرک پاور کس طرح تقسیم ہوتی ہے۔ <strong>Answer Page: 126</strong></li>
+    <li>سوال 8: ایسی کرنٹ اور ڈی سی کرنٹ میں فرق کریں۔ <strong>Answer Page: 132</strong></li>
+    <li>سوال 9: کلو واٹ کی تعریف اور فارمولا لکھیں۔ <strong>Answer Page: 125</strong></li>
+    <li>سوال 10: پیرالل طریقہ سے جوڑے گئے ریزسٹنس کی خصوصیات لکھیں۔ <strong>Answer Page: 119</strong></li>
+    <li>سوال 11: الیکٹرک پاور کی تعریف، یونٹ اور مساوات لکھیں۔ <strong>Answer Page: 124</strong></li>
+    <li>سوال 12: جول کا قانون لکھیں، مقاصد اور مساوات۔ <strong>Answer Page: 123</strong></li>
+    <li>سوال 13: اوہم اور نان اوہم کنڈکٹر کی تعریف اور مثالیں لکھیں۔ <strong>Answer Page: 114</strong></li>
+    <li>سوال 14: کنڈکٹر اور انسولیٹر میں فرق مثالوں کے ساتھ بیان کریں۔ <strong>Answer Page: 132</strong></li>
+    <li>سوال 15: الیکٹروکونڈکٹر کی تعریف اور یونٹ لکھیں۔ <strong>Answer Page: 114</strong></li>
+  </ul>
+</div>
+
+<!-- سبق 15 -->
+<div id="lesson15" class="question-list">
+  <span class="back-btn" onclick="goBack()">← سبق کی فہرست میں واپس</span>
+  <ul>
+    <li>سوال 1: فلیمنگ کے بائیں ہاتھ کا اصول بیان کریں۔ <strong>Answer Page: 142</strong></li>
+    <li>سوال 2: میگنیٹک فیلڈ کی سمت کا دھیان کیسے رکھا جا سکتا ہے؟ <strong>Answer Page: 140</strong></li>
+    <li>سوال 3: میگنیٹک فورس کو بڑھانے کے طریقے لکھیں۔ <strong>Answer Page: 142</strong></li>
+    <li>سوال 4: ڈی سی موٹر کیا ہے؟ <strong>Answer Page: 157</strong></li>
+    <li>سوال 5: ایسے جنریٹر کی تعریف کریں۔ <strong>Answer Page: 157</strong></li>
+    <li>سوال 6: الیکٹرومیگنیٹ انڈکشن کی تعریف کریں۔ <strong>Answer Page: 145</strong></li>
+    <li>سوال 7: ڈی سی موٹر میں سپلٹ رنگز کموٹیٹر کا کیا کام ہے؟ <strong>Answer Page: 145</strong></li>
+    <li>سوال 8: آرمیچر سے کیا مراد ہے؟ <strong>Answer Page: 145</strong></li>
+    <li>سوال 9: فیرادے کے الیکٹرو میگنیٹک انڈکشن سے متعلق قانون کی تعریف کریں۔ <strong>Answer Page: 145</strong></li>
+    <li>سوال 10: انڈیوسڈ EMF پر اثر انداز ہونے والے عوامل کون سے ہیں؟ <strong>Answer Page: 148</strong></li>
+    <li>سوال 11: لینز کے قانون کی تعریف کریں۔ <strong>Answer Page: 109</strong></li>
+    <li>سوال 12: میوچل انڈکشن سے کیا مراد ہے؟ <strong>Answer Page: 152</strong></li>
+    <li>سوال 13: سٹیپ اپ اور سٹیپ ڈاؤن ٹرانسفارمر سے کیا مراد ہے؟ <strong>Answer Page: 151</strong></li>
+    <li>سوال 14: ٹرانسفارمر کیسے کام کرتا ہے؟ <strong>Answer Page: 153</strong></li>
+    <li>سوال 15: ٹرانسفارمر سے کیا مراد ہے؟ <strong>Answer Page: 153</strong></li>
+    <li>سوال 16: ریلے کیا ہے اور یہ کیسے کام کرتا ہے؟ <strong>Answer Page: 155</strong></li>
+    <li>سوال 17: الیکٹرومیگنیٹ کی تعریف اور دو مثالیں دیں۔ <strong>Answer Page: 155</strong></li>
+    <li>سوال 18: MRI کیسے کام کرتا ہے؟ <strong>Answer Page: 139</strong></li>
+    <li>سوال 19: الیکٹرومیگنیٹزم کی تعریف کریں۔ <strong>Answer Page: 139</strong></li>
+  </ul>
+</div>
+
+<script>
+function showQuestions(lessonId){
+  document.querySelectorAll('.lesson-list').forEach(e => e.style.display = 'none');
+  document.querySelectorAll('.question-list').forEach(e => e.style.display = 'none');
+  document.getElementById(lessonId).style.display = 'block';
+}
+
+function goBack(){
+  document.querySelectorAll('.lesson-list').forEach(e => e.style.display = 'block');
+  document.querySelectorAll('.question-list').forEach(e => e.style.display = 'none');
+}
+</script>
+
+</body>
+</html>
